name:                haskell-echo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mattdenner/haskell-echo#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew Denner
maintainer:          matt.denner@gmail.com
copyright:           2019 Matthew Denner
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell-echo
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
